Updated env paths to use root data directory

--- a/backend/.env
+++ b/backend/.env
@@ -7,10 +7,10 @@ LLM_API_KEY=ollama
 
 # Embeddings + Vector DB
 EMBED_MODEL=sentence-transformers/all-MiniLM-L6-v2
-CHROMA_DIR=./backend/data/chroma
+CHROMA_DIR=./data/chroma
 
 # Relational DB (SQLite for now)
-DB_URL=sqlite:///./backend/academic.db
+DB_URL=sqlite:///./data/academic.db
 
 # Environment flag
 APP_ENV=development
