Switched to tinyllama for lower RAM usage

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 # === AIML Nexus Environment ===
 
 # Local LLM (via Ollama)
-LLM_MODEL=phi3:mini
+LLM_MODEL=tinyllama
 LLM_BASE_URL=http://localhost:11434/v1
 LLM_API_KEY=ollama
 
